--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+:root{
+  --first-color: rgb(6, 0, 255);
+  --second-color: rgb(169, 169, 164);
+  --white-alpha-color: rgb(255, 255, 255,0.8);
+  --first-font: 'poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html{
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,*::after,*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.body{
+  overflow-x: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  color: var(--first-color);
+  font-family: var(--first-font);
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (min-width:800px) {
+     h1:nth-child(1){
+        grid-column: span 3;
+        text-align: center;
+      }
 }
