--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -42,6 +42,10 @@
                 .text-back{
                     background-color: var(--white-alpha-color);
                     height: 50px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-content: center;
                     text-align: center;
                     color: var(--first-color);
                     text-shadow: 0px 1px var(--second-color);
